# container_perception

./: CMakeLists.txt  package.xml
include/container_perception/: container_tracker.hpp  leg_detector.hpp  leg_localizer.hpp
include/plane_detector/: plane_detector.hpp
launch/: perception_pipeline.launch.py  perception_pipeline_sim.launch.py
msg/: PolygonArray.msg
src/: container_tracker.cpp  container_tracker_node.cpp  leg_detector.cpp  leg_detector_node.cpp  leg_inspector_node.cpp  leg_localizer.cpp  leg_localizer_node.cpp  plane_detector.cpp  plane_detector_node.cpp
srv/: LocalizeLegs.srv
